<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:contentDescription="Reporting Window"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/popupcreateauction_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_xcross"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="center"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:paddingLeft="12dp"
                    android:text="Create New Auction"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/popupcreateauction_create_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/secondary"
                    android:paddingVertical="12dp"
                    android:text="CREATE"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="25dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- Form -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/popupcreateauction_auction_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Auction Title"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_title_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:maxLength="100" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Description"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_desc_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:lines="3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:layout_weight="0.5"
                        android:hint="Minimum Bid"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_auction_minbid_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/popupcreateauction_expiry_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="2dp"
                            android:layout_weight="0.5"
                            android:enabled="false"
                            android:paddingTop="4dp"
                            app:boxBackgroundMode="outline"
                            app:hintEnabled="false"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/popupcreateauction_expiry_text"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/popupcreateauction_expiry_picker_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="6dp"
                            android:backgroundTint="@color/teal_700"
                            android:minWidth="150dp"
                            android:text="Expiry"
                            app:icon="@drawable/ic_calendar_month"
                            app:iconGravity="textStart"
                            app:iconTint="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="6dp"
                        android:background="@android:color/darker_gray" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Product Title"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_product_title_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:maxLength="100" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Product Description"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="true"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/popupcreateauction_product_desc_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:lines="3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="78dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:ems="10"
                            android:focusable="false"
                            android:text="Add Image" />

                        <ImageButton
                            android:id="@+id/popupcreateauction_image_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            app:srcCompat="@drawable/ic_plus_symbol" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:text="Add Category Tags:"
                        android:textSize="24sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/popupcreateauction_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        app:selectionRequired="false"
                        app:chipSpacingHorizontal="4dp">
                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>