...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_auction_viewholder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="TITLE"
                android:layout_weight="0.9"
                android:textAlignment="center"
...
                android:textSize="14sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/my_auction_viewholder_recent_bids_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:background="@color/primary"
                android:gravity="center"
...
